# trafik

./: Cargo.toml  Makefile  README.md  Vagrantfile
scripts/: cleanup-named.sh  cleanup_generic.sh  provision.sh  test.sh
src/: bpf.rs  lib.rs
src/algorithms/: bbr.rs  cubic.rs  generic_runner.rs  mod.rs  reno.rs
trafik-ir/: Cargo.toml
trafik-ir/src/: binding.rs  expr.rs  lib.rs  program.rs  types.rs
trafik-runtime/: Cargo.toml  bpf.rs  main.rs
trafik-runtime/algorithms/: bbr.rs  cubic.rs  generic_runner.rs  reno.rs
